--- a/src/app/components/care/care.component.html
+++ b/src/app/components/care/care.component.html
@@ -6,13 +6,13 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <a href="care.html"><img class="first-slide" src="images/ba1.jpg" alt="First slide"></a>
+      <a href="care.html"><img class="first-slide" src="../../assets/images/ba1.jpg" alt="First slide"></a>
     </div>
     <div class="item">
-      <a href="kitchen.html"><img class="second-slide " src="images/ba.jpg" alt="Second slide"></a>
+      <a href="kitchen.html"><img class="second-slide " src="../../assets/images/ba.jpg" alt="Second slide"></a>
     </div>
     <div class="item">
-      <a href="hold.html"><img class="third-slide " src="images/ba2.jpg" alt="Third slide"></a>
+      <a href="hold.html"><img class="third-slide " src="../../assets/images/ba2.jpg" alt="Third slide"></a>
     </div>
   </div>
 </div>
@@ -23,21 +23,21 @@
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="images/ki3.jpg" class="img-responsive" alt="">
+				<img src="../../assets/images/ki3.jpg" class="img-responsive" alt="">
 			</a>
       <h6>Natural Cream</h6>
       <p>Nam libero tempore</p>
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="images/ki4.jpg" class="img-responsive" alt="">
+				<img src="../../assets/images/ki4.jpg" class="img-responsive" alt="">
 			</a>
       <h6>Shaving Kit</h6>
       <p>Nam libero tempore</p>
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="images/ki5.jpg" class="img-responsive" alt="">
+				<img src="../../assets/images/ki5.jpg" class="img-responsive" alt="">
 			</a>
       <h6>Makeup Kit</h6>
       <p>Nam libero tempore</p>
@@ -55,282 +55,9 @@
       </div>
     </div>
     <div class=" con-w3l agileinf">
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal1" class="offer-img">
-										<img src="images/of36.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Baby Oil</a>(250 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$7.00</label><em class="item_price">$6.00</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="36" data-name="Baby Oil" data-summary="summary 36" data-price="6.00"
-                data-quantity="1" data-image="images/of36.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal2" class="offer-img">
-										<img src="images/of37.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Soap</a>(250 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$5.00</label><em class="item_price">$4.50</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="37" data-name="Soap" data-summary="summary 37" data-price="4.50"
-                data-quantity="1" data-image="images/of37.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal3" class="offer-img">
-										<img src="images/of38.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Hair Gel</a>(100 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$4.00</label><em class="item_price">$3.50</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="38" data-name="Hair Gel" data-summary="summary 38" data-price="3.50"
-                data-quantity="1" data-image="images/of38.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal4" class="offer-img">
-										<img src="images/of39.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Lotion </a>(100 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$1.00</label><em class="item_price">$0.80</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="39" data-name="Lotion" data-summary="summary 39" data-price="0.80"
-                data-quantity="1" data-image="images/of39.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal5" class="offer-img">
-										<img src="images/of40.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Shower Gel</a>(250 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$7.00</label><em class="item_price">$6.00</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="40" data-name="Shower Gel" data-summary="summary 40" data-price="6.00"
-                data-quantity="1" data-image="images/of40.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal6" class="offer-img">
-										<img src="images/of41.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Hair Color</a>(250 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$5.00</label><em class="item_price">$4.50</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="41" data-name="Hair Color" data-summary="summary 41" data-price="4.50"
-                data-quantity="1" data-image="images/of41.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal7" class="offer-img">
-										<img src="images/of42.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html"> Wipes</a>(300 kg)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$4.00</label><em class="item_price">$3.50</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="42" data-name="Wipes" data-summary="summary 42" data-price="3.50"
-                data-quantity="1" data-image="images/of42.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal8" class="offer-img">
-						<img src="images/of43.png" class="img-responsive" alt="">
-					</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Essential Oils</a>(200 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$1.00</label><em class="item_price">$0.80</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="43" data-name="Essential Oils" data-summary="summary 43" data-price="0.80"
-                data-quantity="1" data-image="images/of43.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal9" class="offer-img">
-										<img src="images/of44.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Cream</a>(150 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$7.00</label><em class="item_price">$6.00</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="44" data-name="Cream" data-summary="summary 44" data-price="6.00"
-                data-quantity="1" data-image="images/of44.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal10" class="offer-img">
-										<img src="images/of45.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Hair Color</a>(250 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$5.00</label><em class="item_price">$4.50</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="45" data-name="Hair Color" data-summary="summary 45" data-price="4.50"
-                data-quantity="1" data-image="images/of45.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal11" class="offer-img">
-										<img src="images/of46.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Baby Care</a>(1 kg)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$4.00</label><em class="item_price">$3.50</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="46" data-name="Baby Care" data-summary="summary 46" data-price="3.50"
-                data-quantity="1" data-image="images/of46.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 pro-1">
-        <div class="col-m">
-          <a href="#" data-toggle="modal" data-target="#myModal12" class="offer-img">
-										<img src="images/of47.png" class="img-responsive" alt="">
-									</a>
-          <div class="mid-1">
-            <div class="women">
-              <h6><a href="single.html">Lotion</a>(100 g)</h6>
-            </div>
-            <div class="mid-2">
-              <p><label>$1.00</label><em class="item_price">$0.80</em></p>
-              <div class="block">
-                <div class="starbox small ghosting"> </div>
-              </div>
-              <div class="clearfix"></div>
-            </div>
-            <div class="add">
-              <button class="btn btn-danger my-cart-btn my-cart-b" data-id="47" data-name="Lotion" data-summary="summary 47" data-price="0.80"
-                data-quantity="1" data-image="images/of47.png">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
+
+      <!-- Products to be listed here -->
+
       <div class="clearfix"></div>
     </div>
   </div>
