--- a/src/app/components/care/care.component.html
+++ b/src/app/components/care/care.component.html
@@ -1,21 +1,4 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <a href="care.html"><img class="first-slide" src="../../assets/images/ba1.jpg" alt="First slide"></a>
-    </div>
-    <div class="item">
-      <a href="kitchen.html"><img class="second-slide " src="../../assets/images/ba.jpg" alt="Second slide"></a>
-    </div>
-    <div class="item">
-      <a href="hold.html"><img class="third-slide " src="../../assets/images/ba2.jpg" alt="Third slide"></a>
-    </div>
-  </div>
-</div>
+<!-- Carousel Here -->
 <div class="kic-top ">
   <div class="container ">
     <div class="kic ">
