--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,5 @@
 <div class="header">
-
   <div class="container">
-
     <div class="logo">
       <h1><a [routerLink]="['']"><b>T<br>H<br>E</b>Tec Store<span>The Best Supermarket</span></a></h1>
     </div>
@@ -10,24 +8,20 @@
         <li><a [routerLink]="['cart']"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a></li>
         <li><a [routerLink]="['login']"><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
         <li><a [routerLink]="['register']"><i class="fa fa-arrow-right" aria-hidden="true"></i>Register</a></li>
-        <li><a [routerLink]="['codes']"><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
+        <li><a [routerLink]="['orders']"><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
         <li><a [routerLink]="['shipping']"><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>
       </ul>
     </div>
-
     <div class="header-ri">
       <ul class="social-top">
-        <li><a href="#" class="icon facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a></li>
-        <li><a href="#" class="icon twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a></li>
-        <li><a href="#" class="icon pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i><span></span></a></li>
-        <li><a href="#" class="icon dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i><span></span></a></li>
+        <li><a href="https://fb.com" target="_blank" class="icon facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a></li>
+        <li><a href="https://twitter.com" target="_blank" class="icon twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a></li>
+        <li><a href="https://pinterest.com" target="_blank" class="icon pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i><span></span></a></li>
+        <li><a href="https://dribble.com" target="_blank" class="icon dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i><span></span></a></li>
       </ul>
     </div>
-
-
     <div class="nav-top">
       <nav class="navbar navbar-default">
-
         <div class="navbar-header nav_2">
           <button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
             <span class="sr-only">Toggle navigation</span>
@@ -35,60 +29,48 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-
-
         </div>
         <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
           <ul class="nav navbar-nav ">
-            <li class=" active"><a href="index.html" class="hyper "><span>Home</span></a></li>
-
+            <li class=" active"><a [routerLink]="['']" class="hyper "><span>Home</span></a></li>
             <li class="dropdown ">
-              <a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown"><span>Kitchen<b class="caret"></b></span></a>
+              <a [routerLink]="['kitchen']" class="dropdown-toggle  hyper" data-toggle="dropdown"><span>Kitchen<b class="caret"></b></span></a>
               <ul class="dropdown-menu multi">
                 <div class="row">
                   <div class="col-sm-3">
                     <ul class="multi-column-dropdown">
-
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Water & Beverages</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Fruits & Vegetables</a></li>
                       <li><a href="kitchen.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Staples</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Branded Food</a></li>
-
                     </ul>
-
                   </div>
                   <div class="col-sm-3">
-
                     <ul class="multi-column-dropdown">
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Breakfast &amp; Cereal</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Snacks</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Spices</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Biscuit &amp; Cookie</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Sweets</a></li>
-
                     </ul>
-
                   </div>
                   <div class="col-sm-3">
-
                     <ul class="multi-column-dropdown">
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Pickle & Condiment</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Instant Food</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Dry Fruit</a></li>
                       <li><a href="kitchen.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Tea &amp; Coffee</a></li>
-
                     </ul>
                   </div>
                   <div class="col-sm-3 w3l">
-                    <a href="kitchen.html"><img src="../../../assets/images/me.png" class="img-responsive" alt=""></a>
+                    <a [routerLink]="['kitchen']"><img src="../../../assets/images/me.png" class="img-responsive" alt=""></a>
                   </div>
                   <div class="clearfix"></div>
                 </div>
               </ul>
             </li>
             <li class="dropdown">
-
-              <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown"><span> Personal Care <b class="caret"></b></span></a>
+              <a [routerLink]="['care']" class="dropdown-toggle hyper" data-toggle="dropdown"><span> Personal Care <b class="caret"></b></span></a>
               <ul class="dropdown-menu multi multi1">
                 <div class="row">
                   <div class="col-sm-3">
@@ -97,40 +79,33 @@
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Baby Care</a></li>
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Cosmetics</a></li>
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Deo & Purfumes</a></li>
-
                     </ul>
-
                   </div>
                   <div class="col-sm-3">
-
                     <ul class="multi-column-dropdown">
                       <li><a href="care.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Hair Care </a></li>
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Oral Care</a></li>
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Personal Hygiene</a></li>
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Skin care</a></li>
-
                     </ul>
-
                   </div>
                   <div class="col-sm-3">
-
                     <ul class="multi-column-dropdown">
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Fashion Accessories </a></li>
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Grooming Tools</a></li>
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Shaving Need</a></li>
                       <li><a href="care.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Sanitary Needs</a></li>
-
                     </ul>
                   </div>
                   <div class="col-sm-3 w3l">
-                    <a href="care.html"><img src="../../../assets/images/me1.png" class="img-responsive" alt=""></a>
+                    <a [routerLink]="['care']"><img src="../../../assets/images/me1.png" class="img-responsive" alt=""></a>
                   </div>
                   <div class="clearfix"></div>
                 </div>
               </ul>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown"><span>Household<b class="caret"></b></span></a>
+              <a [routerLink]="['hold']" class="dropdown-toggle hyper" data-toggle="dropdown"><span>Household<b class="caret"></b></span></a>
               <ul class="dropdown-menu multi multi2">
                 <div class="row">
                   <div class="col-sm-3">
@@ -139,41 +114,33 @@
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>CookWear</a></li>
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Detergents</a></li>
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Gardening Needs</a></li>
-
                     </ul>
-
                   </div>
                   <div class="col-sm-3">
-
                     <ul class="multi-column-dropdown">
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Kitchen & Dining</a></li>
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>KitchenWear</a></li>
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Pet Care</a></li>
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Plastic Wear</a></li>
-
                     </ul>
-
                   </div>
                   <div class="col-sm-3">
-
                     <ul class="multi-column-dropdown">
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Pooja Needs</a></li>
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Serveware</a></li>
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Safety Accessories</a></li>
                       <li><a href="hold.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Festive Decoratives </a></li>
-
                     </ul>
                   </div>
                   <div class="col-sm-3 w3l">
-                    <a href="hold.html"><img src="../../../assets/images/me2.png" class="img-responsive" alt=""></a>
+                    <a [routerLink]="['hold']"><img src="../../../assets/images/me2.png" class="img-responsive" alt=""></a>
                   </div>
                   <div class="clearfix"></div>
                 </div>
               </ul>
             </li>
-
-            <li><a href="codes.html" class="hyper"> <span>Codes</span></a></li>
-            <li><a href="contact.html" class="hyper"><span>Contact Us</span></a></li>
+            <li><a [routerLink]="['codes']" class="hyper"><span>Codes</span></a></li>
+            <li><a [routerLink]="['contact']" class="hyper"><span>Contact Us</span></a></li>
           </ul>
         </div>
       </nav>
