--- a/src/app/components/single/single.component.html
+++ b/src/app/components/single/single.component.html
@@ -1,49 +1,44 @@
-<div id="picture-frame">
-  <img src="images/si.jpg" data-src="images/si-1.jpg" alt="" class="img-responsive" />
-</div>
-<script src="js/jquery.zoomtoo.js"></script>
-<script>
-  $(function () {
-    $("#picture-frame").zoomToo({
-      magnify: 1
-    });
-  });
-
-</script>
-<div class="col-md-7 single-top-left ">
-  <div class="single-right">
-    <h3>Wheat</h3>
-
-
-    <div class="pr-single">
-      <p class="reduced ">
-        <del>$10.00</del>$5.00</p>
+<div class="single">
+  <div class="container">
+    <div class="single-top-main">
+      <div class="col-md-5 single-top">
+        <div class="single-w3agile">
+          <div id="picture-frame">
+            <img src="../../assets/images/si.jpg" data-src="../../assets/images/si-1.jpg" alt="" class="img-responsive" />
+          </div>
+          <script src="js/jquery.zoomtoo.js"></script>
+          <script>
+            $(function () {
+              $("#picture-frame").zoomToo({
+                magnify: 1
+              });
+            });
+          </script>
+        </div>
+      </div>
+      <div class="col-md-7 single-top-left ">
+        <div class="single-right">
+          <h3>Wheat</h3>
+          <div class="pr-single">
+            <p class="reduced ">
+              <del>$10.00</del>$5.00</p>
+          </div>
+          <div class="block block-w3">
+            <div class="starbox small ghosting"> </div>
+          </div>
+          <p class="in-pa"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+            form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          <div class="add add-3">
+            <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="Wheat" data-summary="summary 1" data-price="6.00"
+              data-quantity="1" data-image="images/si.jpg">Add to Cart</button>
+          </div>
+          <div class="clearfix"> </div>
+        </div>
+      </div>
+      <div class="clearfix"> </div>
     </div>
-    <div class="block block-w3">
-      <div class="starbox small ghosting"> </div>
-    </div>
-    <p class="in-pa"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-      by injected humour, or randomised words which don't look even slightly believable. </p>
-
-    <ul class="social-top">
-      <li><a href="#" class="icon facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a></li>
-      <li><a href="#" class="icon twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a></li>
-      <li><a href="#" class="icon pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i><span></span></a></li>
-      <li><a href="#" class="icon dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i><span></span></a></li>
-    </ul>
-    <div class="add add-3">
-      <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="Wheat" data-summary="summary 1" data-price="6.00"
-        data-quantity="1" data-image="images/si.jpg">Add to Cart</button>
-    </div>
-
-
-
-    <div class="clearfix"> </div>
   </div>
-
-
 </div>
-<div class="clearfix"> </div>
 <div class="content-top offer-w3agile">
   <div class="container ">
     <div class="spec ">
